aggiunto anteprima social

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
-  <title>The Rock (1996)</title>
-  <meta property="og:title" content="Sito personale di Alessia Bianchi" />
-  <meta property="og:image" href="assets/img/Alessia Bianchi.png" />
+
+  <meta property="og:title" content="Portfolio di Alessia Bianchi">
+  <meta property="og:description" content="Sito personale con cv e portfolio dei miei lavori.">
+  <meta property="og:image" content="https://alebia.github.io/Sito-personale/assets/img/fotoprofilo.jpg">
+  <meta property="og:url" content="https://alebia.github.io/Sito-personale/">
+  <meta property="og:type" content="website"> 
+
   <title>Portfolio di Alessia</title>
 </head>
 
@@ -36,19 +40,19 @@
         <a href="contattami/index.html" class="nav-link text-dark">Contattami</a>
 
         <div class="socialburger">
-          <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+          <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank" class="text-dark me-2"><i
               class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+          <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
               class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
         </div>
       </nav>
     </div>
 
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/"rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 
@@ -188,7 +192,7 @@
     <div id="popup0" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/progetto html e css di Alessia Bianchi.pdf" target="_blank">
+        <a href="assets/progetti/progetto html e css di Alessia Bianchi.pdf" rel="noopener" target="_blank">
           <img src="assets/img/html e css.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Questo sito è stato realizzato per questo progetto! Grazie alle conoscenze base di HTML e
@@ -203,7 +207,7 @@
     <div id="popup1" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/user interface merged.pdf" target="_blank">
+        <a href="assets/progetti/user interface merged.pdf" rel="noopener" target="_blank">
           <img src="assets/img/UI.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">In questo progetto ho realizzato l'interfaccia utente del sito Buddhify, migliorandola dal
@@ -216,7 +220,7 @@
     <div id="popup2" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/wireframing.pdf" target="_blank">
+        <a href="assets/progetti/wireframing.pdf"rel="noopener" target="_blank">
           <img src="assets/img/wireframe.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Per questo progetto ho realizzato un wireframe del sito Buddhify per dare una base al
@@ -228,7 +232,7 @@
     <div id="popup3" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/Progetto Grafica MKT di Alessia Bianchi.pdf" target="_blank">
+        <a href="assets/progetti/Progetto Grafica MKT di Alessia Bianchi.pdf" rel="noopener" target="_blank">
           <img src="assets/img/grafica.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Ho realizzato questo progetto per il master in UX/UI Design con Start2Impact. Uno dei
@@ -241,7 +245,7 @@
     <div id="popup4" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/Progetto Social Media di Alessia Bianchi.pdf" target="_blank">
+        <a href="assets/progetti/Progetto Social Media di Alessia Bianchi.pdf" rel="noopener" target="_blank">
           <img src="assets/img/social media.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Per questo progetto ho attuato una strategia di crescita per una pagina social, dopo aver
@@ -253,7 +257,7 @@
     <div id="popup5" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/Progetto Copywriting di Alessia Bianchi.pdf" target="_blank">
+        <a href="assets/progetti/Progetto Copywriting di Alessia Bianchi.pdf" rel="noopener" target="_blank">
           <img src="assets/img/copy.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Questo è stato il primo progetto realizzato per il master in UX/UI Design con
@@ -267,7 +271,7 @@
     <div id="popup6" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=LHevIE4uiuo" target="_blank">
+        <a href="https://www.youtube.com/watch?v=LHevIE4uiuo" rel="noopener" target="_blank">
           <img src="assets/img/lingua disonesta.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Questo progetto è un documentario tutorial sulla persuasione nella propaganda politica e
@@ -283,7 +287,7 @@
     <div id="popup7" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=0PsUYvgoBwA" target="_blank">
+        <a href="https://www.youtube.com/watch?v=0PsUYvgoBwA" rel="noopener" target="_blank">
           <img src="assets/img/simecom.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Video vincitore del concorso per la compagnia Simecom tenuto sul sito myvisto.it nel
@@ -296,7 +300,7 @@
     <div id="popup8" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=zSCiX6916ac" target="_blank">
+        <a href="https://www.youtube.com/watch?v=zSCiX6916ac" rel="noopener" target="_blank">
           <img src="assets/img/n3xt.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Servizi fotografici, riprese e montaggio video per scopi pubblicitari per un negozio di
@@ -309,7 +313,7 @@
     <div id="popup9" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=OpXRUv5VtVY" target="_blank">
+        <a href="https://www.youtube.com/watch?v=OpXRUv5VtVY" rel="noopener" target="_blank">
           <img src="assets/img/GeCloud.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Ideazione e realizzazione di uno spot pubblicitario. Ho lavorato in un team di due persone
@@ -322,7 +326,7 @@
     <div id="popup9bis" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.youtube.com/watch?v=EsZWik65EiY" target="_blank">
+        <a href="https://www.youtube.com/watch?v=EsZWik65EiY" rel="noopener" target="_blank">
           <img src="assets/img/artedelfattoamano.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Ideazione e realizzazione di un video che mostra la creazione di alcune bomboniere fatte a
@@ -335,7 +339,7 @@
     <div id="popup10" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
+        <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank">
           <img src="assets/img/hobby/photo.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/photo2.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/photo3.jpg" alt="Progetto 1" class="modal-img">
@@ -351,7 +355,7 @@
     <div id="popup11" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
+        <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank">
           <img src="assets/img/hobby/disegno.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/disegno2.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/disegno3.jpg" alt="Progetto 1" class="modal-img">
@@ -380,7 +384,7 @@
     <div id="popup13" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank">
+        <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank">
           <img src="assets/img/hobby/travel.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/travel2.jpg" alt="Progetto 1" class="modal-img">
           <img src="assets/img/hobby/travel3.jpg" alt="Progetto 1" class="modal-img">
@@ -397,17 +401,17 @@
 
   <footer>
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it"rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
     <div class="social-iconsfooter">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank" class="text-dark me-2"><i
           class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
           class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
