ale bianchi senza spazio

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="assets/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
+  <link rel="icon" type="image/png" href="assets/img/AlessiaBianchi2.png" />
 
   <meta property="og:title" content="Portfolio di Alessia Bianchi">
   <meta property="og:description" content="Sito personale con cv e portfolio dei miei lavori.">
-  <meta property="og:image" content="assets/img/fotoprofilo.jpg">
+  <meta property="og:image" content="https://alebia.github.io/Sito-personale/assets/img/AlessiaBianchi2.png">
   <meta property="og:url" content="https://alebia.github.io/Sito-personale/">
   <meta property="og:type" content="website"> 
 
