--- a/cv/index.html
+++ b/cv/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEJv+3p6f4g7qD0B6mH6g2OSlKjA4lx0pLzAtYd5Am4zGHFiwD62cBb1X9g6" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="assets/img/Alessia Bianchi2.png" />
+  <link rel="icon" type="image/png" href="../assets/img/AlessiaBianchi2.png" />
   <title>Portfolio di Alessia</title>
 </head>
 
@@ -36,20 +36,20 @@
         <a href="../contattami/index.html" class="nav-link text-dark">Contattami</a>
 
         <div class="socialburger">
-          <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+          <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank" class="text-dark me-2"><i
               class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+          <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
               class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
         </div>
       </nav>
     </div>
 
 
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia"rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
 
@@ -73,10 +73,10 @@
           <h2> Social</h2>
           <ul>
             <li><a
-                href="https://www.linkedin.com/in/alessiabianchi1994/?profileId=ACoAACoHr1wBAj5Zu1xkYQzLgmdW49hs2y-22_4"><i
+                href="https://www.linkedin.com/in/alessiabianchi1994/?profileId=ACoAACoHr1wBAj5Zu1xkYQzLgmdW49hs2y-22_4" rel="noopener" target="_blank"><i
                   class="fab fa-linkedin"></i> LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/alebia23/"><i class="fab fa-instagram"></i> Instagram</a></li>
-            <li><a href="https://github.com/Alebia"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a href="https://www.instagram.com/alebia23/" rel="noopener" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
           </ul>
           <h2>Pro Skills</h2>
           <ul>
@@ -202,17 +202,17 @@
   <footer>
 
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it"rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
     <div class="social-iconsfooter">
-      <a href="https://www.instagram.com/alebia23/?hl=it" target="_blank" class="text-dark me-2"><i
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank" class="text-dark me-2"><i
           class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" target="_blank" class="text-dark me-2"><i
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
           class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
