--- a/cv/index.html
+++ b/cv/index.html
@@ -82,31 +82,31 @@
           <ul>
             <li>DaVinci</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 80%;"></div>
+              <div class="progress-bar"></div>
             </div>
             <li>Photoshop</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 70%;"></div>
+              <div class="progress-bar1"></div>
             </div>
             <li>Premiere Pro</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 85%;"></div>
+              <div class="progress-bar2"></div>
             </div>
             <li>Figma</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 60%;"></div>
+              <div class="progress-bar3"></div>
             </div>
             <li>Illustrator</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 60%;"></div>
+              <div class="progress-bar4"></div>
             </div>
             <li>Visual studio code</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 50%;"></div>
+              <div class="progress-bar5"></div>
             </div>
             <li>Pacchetto Office</li>
             <div class="progress-container">
-              <div class="progress-bar" style="width: 70%;"></div>
+              <div class="progress-bar6"></div>
             </div>
           </ul>
 
