--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="intro">
       <div class="text-content">
         <h1>Ciao, sono Alessia</h1>
-        <h2>Studentessa di UX/UI Design su Start2impact!</h2>
+        <h2>Ho terminato il master in UX/UI Design su Start2impact!</h2>
         <p>Sono appassionata di video, creazione di contenuti, grafica e design. La mia più grande aspirazione è unire
           tutte queste passioni per costruire il lavoro dei miei sogni, dove creatività e innovazione si fondano per
           dare vita a progetti unici e coinvolgenti.
