aggiunto un progetto user test

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="Sito personale con cv e portfolio dei miei lavori.">
   <meta property="og:image" content="assets/img/AlessiaBianchi2.png">
   <meta property="og:url" content="https://alebia.github.io/Sito-personale/">
-  <meta property="og:type" content="website"> 
+  <meta property="og:type" content="website">
 
   <title>Portfolio di Alessia</title>
 </head>
@@ -42,16 +42,19 @@
         <div class="socialburger">
           <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank" class="text-dark me-2"><i
               class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
-              class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"
+            class="text-dark me-2"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i
+              class="fab fa-github"></i></a>
         </div>
       </nav>
     </div>
 
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/"rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i
+          class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
@@ -63,7 +66,7 @@
     <section class="intro">
       <div class="text-content">
         <h1>Ciao, sono Alessia</h1>
-        <h2>Ho terminato il master in UX/UI Design su Start2impact!</h2>
+        <h2>Studentessa di UX/UI Design su Start2impact!</h2>
         <p>Sono appassionata di video, creazione di contenuti, grafica e design. La mia più grande aspirazione è unire
           tutte queste passioni per costruire il lavoro dei miei sogni, dove creatività e innovazione si fondano per
           dare vita a progetti unici e coinvolgenti.
@@ -85,6 +88,11 @@
           </div>
         </div>
         <div class="projects">
+          <div class="project">
+            <a href="#popup00" class="open-popup">
+              <img src="assets/img/Screenshot 2025-06-09 153258.jpg" alt="Anteprima user test">
+            </a>
+          </div>
           <div class="project">
             <a href="#popup0" class="open-popup">
               <img src="assets/img/html e css.png" alt="Anteprima html e css">
@@ -188,6 +196,22 @@
       </div>
     </div>
 
+
+    <!-- Pop-up 00 -->
+    <div id="popup00" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="history.back();">&times;</span>
+        <a href="assets/progetti/user test.pdf" rel="noopener" target="_blank">
+          <img src="assets/img/Screenshot 2025-06-09 153258.jpg" alt="Progetto 1" class="modal-img">
+        </a>
+        <p class="modal-desc">In questo progetto ho effettuato un test utente per validare o respingeer le modifiche e i
+          miglioramenti da me effettuati. Una parte importante del processo che ci aiuta a capire le ulteriori falle del
+          sistema appena modificato.
+        </p>
+      </div>
+    </div>
+
+
     <!-- Pop-up 0 -->
     <div id="popup0" class="modal">
       <div class="modal-content">
@@ -220,7 +244,7 @@
     <div id="popup2" class="modal">
       <div class="modal-content">
         <span class="close-btn" onclick="history.back();">&times;</span>
-        <a href="assets/progetti/wireframing.pdf"rel="noopener" target="_blank">
+        <a href="assets/progetti/wireframing.pdf" rel="noopener" target="_blank">
           <img src="assets/img/wireframe.png" alt="Progetto 1" class="modal-img">
         </a>
         <p class="modal-desc">Per questo progetto ho realizzato un wireframe del sito Buddhify per dare una base al
@@ -401,8 +425,10 @@
 
   <footer>
     <div class="social-icons">
-      <a href="https://www.instagram.com/alebia23/?hl=it"rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/alebia23/?hl=it" rel="noopener" target="_blank"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank"><i
+          class="fab fa-linkedin"></i></a>
       <a href="https://github.com/Alebia" rel="noopener" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 
@@ -411,7 +437,8 @@
           class="fab fa-instagram"></i></a>
       <a href="https://www.linkedin.com/in/alessiabianchi1994/" rel="noopener" target="_blank" class="text-dark me-2"><i
           class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/Alebia" rel="noopener" target="_blank" class="text-dark me-2"><i
+          class="fab fa-github"></i></a>
     </div>
   </footer>
 
