aggiunto portfolio e aggiornato cv

--- a/contattami/index.html
+++ b/contattami/index.html
@@ -21,6 +21,7 @@
         <nav class="nav">
             <a href="../cv/index.html">CV</a>
             <a href="index.html">Contattami</a>
+            <a href="/assets/progetti/portfolioAlessiaBianchi.pdf">Portfolio</a>
         </nav>
 
         <a href="../index.html">
