--- a/cv/index.html
+++ b/cv/index.html
@@ -20,6 +20,7 @@
     <nav class="nav">
       <a href="index.html">CV</a>
       <a href="../contattami/index.html">Contattami</a>
+      <a href="/assets/progetti/portfolioAlessiaBianchi.pdf">Portfolio</a>
     </nav>
 
     <a href="../index.html">
@@ -59,7 +60,7 @@
     <div class="container">
       <div class="text-center">
         <h1>Alessia Bianchi</h1>
-        <p>UX/UI Design student | Videomaker | Content Creator</p>
+        <p>UX/UI Designer | Videomaker | Content Creator</p>
         <hr>
         <div class="profile-pic2"></div>
       </div>
@@ -80,6 +81,10 @@
           </ul>
           <h2>Pro Skills</h2>
           <ul>
+            <li>UX/UI Design</li>
+            <div class="progress-container">
+              <div class="progress-bar0"></div>
+            </div>
             <li>DaVinci</li>
             <div class="progress-container">
               <div class="progress-bar"></div>
@@ -113,7 +118,7 @@
           <div class="mb-4">
             <h2>Educazione</h2>
             <h4>MASTER UX/UI DESIGN</h4>
-            <h6>2023 - presente</h6><br>
+            <h6>2023 - 2025</h6><br>
             <h5><b>Start2impact</b> </h5>
 
             <h4>LAUREA TRIENNALE</h4>
