--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav class="nav">
       <a href="cv/index.html">CV</a>
       <a href="contattami/index.html">Contattami</a>
+      <a href="assets/progetti/portfolioAlessiaBianchi.pdf">Portfolio</a>
     </nav>
 
     <a href="index.html">
@@ -77,7 +78,8 @@
       <div class="profile-pic"></div>
     </section>
 
-
+  
+ 
 
     <div class="box-container">
 
