--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         </div>
         <div class="projects">
           <div class="project">
+            <a href="#popup000" class="open-popup">
+              <img src="assets/img/Screenshot 2025-06-09 153258.jpg" alt="Anteprima progetto finale">
+            </a>
+          </div>
+          <div class="project">
             <a href="#popup00" class="open-popup">
               <img src="assets/img/Screenshot 2025-06-09 153258.jpg" alt="Anteprima user test">
             </a>
