aggiunto progetto finale

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="projects">
           <div class="project">
             <a href="#popup000" class="open-popup">
-              <img src="assets/img/Screenshot 2025-06-09 153258.jpg" alt="Anteprima progetto finale">
+              <img src="assets/img/progetto finale.jpg" alt="Anteprima progetto finale">
             </a>
           </div>
           <div class="project">
@@ -200,6 +200,20 @@
             </a>
           </div>
         </div>
+      </div>
+    </div>
+
+
+
+    <!-- Pop-up 000 -->
+    <div id="popup000" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="history.back();">&times;</span>
+        <a href="assets/progetti/Progetto Finale UX-UI di Alessia Bianchi.pdf" rel="noopener" target="_blank">
+          <img src="assets/img/progetto finale.jpg" alt="Progetto 1" class="modal-img">
+        </a>
+        <p class="modal-desc">Questo è stato il progetto finale del master in UX/UI Design,dove ho divuto analizzare e miglirare un sito a mia scelta.
+        </p>
       </div>
     </div>
 
